FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../)

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(om_python.i PROPERTIES CPLUSPLUS ON)

SWIG_ADD_MODULE(python_binding python om_python.i)

SWIG_LINK_LIBRARIES(python_binding ${PYTHON_LIBRARIES})
