FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../)

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(om_python.i PROPERTIES CPLUSPLUS ON)

SWIG_ADD_MODULE(om python om_python.i)

SWIG_LINK_LIBRARIES(om ${PYTHON_LIBRARIES} openmodeller)

# Find Python modules installation dir
EXECUTE_PROCESS (
   COMMAND ${PYTHON_EXECUTABLE} -c
   	"import site, sys; sys.stdout.write(site.PREFIXES[-1])"
   OUTPUT_VARIABLE PYTHON_PREFIX
)
EXECUTE_PROCESS (
   COMMAND ${PYTHON_EXECUTABLE} -c
   	"import sys; from distutils.sysconfig import get_python_lib; sys.stdout.write(get_python_lib())"
   OUTPUT_VARIABLE PYTHON_SITEDIR
)
STRING ( REGEX REPLACE "^${PYTHON_PREFIX}/" ""
   PYTHON_SITEDIR "${PYTHON_SITEDIR}"
)

MESSAGE(STATUS "Setting Python site packages dir to: ${PYTHON_SITEDIR}")

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/om.py DESTINATION ${PYTHON_SITEDIR} COMPONENT library)
INSTALL(TARGETS _om LIBRARY DESTINATION ${PYTHON_SITEDIR})
