FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH} ${EXPAT_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../)

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(om_python.i PROPERTIES CPLUSPLUS ON)

SWIG_ADD_MODULE(om python om_python.i)

SWIG_LINK_LIBRARIES(om ${PYTHON_LIBRARIES} openmodeller)

# Find Python modules installation dir
GET_FILENAME_COMPONENT(PYTHON_LIB_INSTALL ${PYTHON_LIBRARY} PATH)
MESSAGE(STATUS "Detected Python library dir: ${PYTHON_LIB_INSTALL}")
EXECUTE_PROCESS (
   COMMAND ${PYTHON_EXECUTABLE} -c
   	"import sys; p=\"${PYTHON_LIB_INSTALL}\"; pp = p.split('/'); pr=pp[:-1] ; sys.stdout.write('/'.join(pr))"
   OUTPUT_VARIABLE PYTHON_PREFIX
)
MESSAGE(STATUS "Calculated Python prefix: ${PYTHON_PREFIX}")
EXECUTE_PROCESS (
   COMMAND ${PYTHON_EXECUTABLE} -c
   	"import sys; from distutils.sysconfig import get_python_lib; sys.stdout.write(get_python_lib())"
   OUTPUT_VARIABLE PYTHON_SITEDIR
)
STRING ( REGEX REPLACE "^${PYTHON_PREFIX}/" ""
   PYTHON_SITEDIR "${PYTHON_SITEDIR}"
)

MESSAGE(STATUS "Setting Python site packages relative dir to: ${PYTHON_SITEDIR}")

IF (WIN32)

  INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/om.py DESTINATION ${OM_BIN_DIR} COMPONENT library)
  INSTALL(TARGETS _om LIBRARY DESTINATION ${OM_BIN_DIR})
ELSE (WIN32)

  INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/om.py DESTINATION ${PYTHON_SITEDIR} COMPONENT library)
  INSTALL(TARGETS _om LIBRARY DESTINATION ${PYTHON_SITEDIR})
ENDIF (WIN32)
